refactor ver1